--- a/.config
+++ b/.config
@@ -25,6 +25,7 @@ CONFIG_PACKAGE_luci-app-passwall=y
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Server is not set
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_Plus is not set
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray=y
+CONFIG_PACKAGE_chinadns-ng=y
 CONFIG_PACKAGE_luci-app-socat=y
 CONFIG_PACKAGE_microsocks=y
 CONFIG_PACKAGE_pdnsd-alt=y
